Small fixes to match java version that on the server